--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Bootstrap 5 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkzj1+1l5DP6O9Fzt5p6Qo6i6NZaUBz1y6M7ZfuygT+Ejpu2fVqK65wxRBYIMmKA" crossorigin="anonymous">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
