--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
       href="https://fonts.googleapis.com/css2?family=Archivo+Semi+Expanded:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-TfJg7Z5FEdCo0/hBkmQK6IptAqSkzNl9YxDJmpZsd85BoFVX0BBhsvjbjt07KJtA"
+  crossorigin="anonymous"
+/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
@@ -32,5 +43,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
